<resources>
    <string name="app_name">咚咚用户端</string>
    <string name="edit">请输入运单号查询快件信息</string>
    <string name="shalou">代取件</string>
    <string name="cars">运送中</string>
    <string name="check">已签收</string>
    <string name="kefu">客服中心</string>
    <string name="huoban">召集伙伴</string>
    <string name="ding">我要下单</string>
    <string name="comurl">www.qbdongdong.com</string>
    <string name="pro">咚咚快递</string>
    <string name="phone">手机号：</string>
    <string name="psw">密&#160;&#160;&#160;&#160;码：</string>
    <string name="login">登录</string>
    <string name="finish">退出</string>
    <string name="news">注册</string>
    <string name="find">找回密码</string>
    <string name="modify_psw">更改密码:</string>
    <string name="modify_nickname">更改昵称:</string>
    <string name="modify_pic">更改头像:</string>
    <string name="hint_sound">提示音效:</string>
    <string name="ephone">请输入手机号</string>
    <string name="epsw">请输入密码</string>
    <string name="geting">待收取</string>
    <string name="paying">待付款</string>
    <string name="posting">运送中</string>
    <string name="publised">已发布</string>
    <string name="got">已送达</string>
    <string name="query">查询</string>
    <string name="register">注册</string>
    <string name="post">请编辑寄件人地址</string>
    <string name="get">请编辑收件人地址</string>
    <string name="var">物品种类：</string>
    <string name="weight">物品重量：</string>
    <string name="pic">物品图片：</string>
    <string name="chweight">请输入物品重量</string>
    <string name="time">取件时间：</string>
    <string name="other">留&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;言：</string>
    <string name="other_check">是否同意他人代收：</string>
    <string name="kg">KG</string>
    <string name="finished">完成</string>
    <string name="cancel">取消订单</string>
    <string name="mp">手机：</string>
    <string name="code">验证码：</string>
    <string name="edit_phone">请输入手机号</string>
    <string name="edit_code">请输入验证码</string>
    <string name="edit_psw">请输入密码</string>
    <string name="edit_conpsw">请确认密码</string>
    <string name="agree">同意《咚咚服务协议》</string>
    <string name="choose">请选择</string>
    <string name="waiting">请稍后</string>
    <string name="real_name">真实姓名：</string>
    <string name="edit_real_name">请输入您的真实姓名</string>
    <string name="ide_type">证件类型：</string>
    <string name="ide_num">证件号码：</string>
    <string name="edit_ide_num">请输入正确的证件号码</string>
    <string name="hold_pic">持证照片：</string>
    <string name="pic_ex">图片示例：</string>
    <string name="post_ide">上传认证</string>
    <string name="str_scan_hint">取景框对准条形码, 即可自动扫描</string>
    <string name="share">您的邀请码</string>
    <string name="rule">邀请规则：</string>
    <string name="grade">我的积分：</string>
    <string name="money">我的零钱：</string>
    <string name="add_address">添加地址</string>
    <string name="name">姓名:</string>
    <string name="city">所在地区:</string>
    <string name="home">详细地址:</string>
    <string name="old_psw">旧密码:</string>
    <string name="new_psw">新密码:</string>
    <string name="con_psw">新密码:</string>
    <string name="yes">是</string>
    <string name="no">否</string>
</resources>
