<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.xaqb.dongdong.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/activity_horizontal_margins"
        android:padding="@dimen/layout_padding"
        android:background="@color/edit"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:layout_gravity="center"

            />

        <EditText
            android:id="@+id/et_phone_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ephone"
            android:textSize="@dimen/edit_text"
            android:background="@null"
            android:layout_gravity="center"
            android:inputType="number"
            android:phoneNumber="true"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/layout_padding"
        android:background="@color/edit"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/psw"
            />

        <EditText
            android:id="@+id/et_psw_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/epsw"
            android:textSize="@dimen/edit_text"
            android:background="@null"
            android:password="true"
            />


    </LinearLayout>

    <Button
        android:id="@+id/bt_login_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/login"
        android:textColor="@color/wirte"
        android:layout_gravity="center"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/tv_new_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news"
            android:layout_alignParentLeft="true"
            android:textColor="@color/textColor"
            />

        <TextView
            android:id="@+id/tv_find_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find"
            android:layout_alignParentRight="true"
            android:textColor="@color/textColor"
            />

    </RelativeLayout>

</LinearLayout>
