<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_find"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.xaqb.dongdong.FindActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mp"
            />
        <EditText
            android:id="@+id/et_phone_find"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/edit_phone"
            android:textSize="@dimen/edit_text"
            android:layout_weight="1"

            />
    </LinearLayout>
    <LinearLayout style="@style/horizontal_black_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/code"
            android:layout_gravity="center"
            />
        <EditText
            android:id="@+id/et_code_find"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/edit_code"
            android:textSize="@dimen/edit_text"
            android:layout_weight="1"
            android:layout_gravity="center"
            />

        <TextView
            android:id="@+id/tv_again_find"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/small_text"
            android:layout_gravity="center"
            />

        <ImageView
            android:id="@+id/iv_code_find"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/newg48"
            />
    </LinearLayout>
    <LinearLayout style="@style/horizontal_black_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/psw"
            android:layout_gravity="center"
            />
        <EditText
            android:id="@+id/et_psw_find"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/edit_psw"
            android:textSize="@dimen/edit_text"
            android:layout_weight="1"
            android:layout_gravity="center"
            />
    </LinearLayout>

    <LinearLayout style="@style/horizontal_black_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/psw"
            android:layout_gravity="center"
            />
        <EditText
            android:id="@+id/et_con_psw_find"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/edit_conpsw"
            android:textSize="@dimen/edit_text"
            android:layout_weight="1"
            android:layout_gravity="center"
            />
    </LinearLayout>
    <LinearLayout style="@style/horizontal_black_line"/>

    <Button
        android:id="@+id/bt_finished_find"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:layout_gravity="center"
        android:text="@string/finished"
        android:textColor="@color/wirte"
        />
</LinearLayout>
