<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.xaqb.dongdong.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/layout_padding"
        >
        <ImageView
            android:id="@+id/iv_user_main"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:src="@mipmap/icon128"
            />
        <View
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <ImageView
            android:id="@+id/iv_msg_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/mesr64"/>
    </LinearLayout>

    <com.bigkoo.convenientbanner.ConvenientBanner
        android:id="@+id/cb_main"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:canLoop="true"
        >


    </com.bigkoo.convenientbanner.ConvenientBanner>


    <LinearLayout
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/edit"
        >

        <ImageView
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/search64"
            />

        <TextView
            android:id="@+id/tv_query_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:layout_gravity="center"
            android:gravity="center"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/tv_wait_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@mipmap/shalou128"
            android:text="@string/shalou"
            android:gravity="center"
            android:layout_weight="1"
            />
        <LinearLayout
           style="@style/vertical_black_line"/>
        <TextView
            android:id="@+id/tv_posting_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@mipmap/cars128"
            android:text="@string/cars"
            android:gravity="center"
            android:layout_weight="1"
            />
        <LinearLayout
            style="@style/vertical_black_line"/>
        <TextView
            android:id="@+id/tv_posted_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@mipmap/check128"
            android:text="@string/check"
            android:layout_weight="1"
            android:gravity="center"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        >
        <TextView
            android:id="@+id/tv_kefu_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@mipmap/kefu128"
            android:text="@string/kefu"
            android:layout_weight="1"
            android:gravity="center"
            />
        <LinearLayout style="@style/vertical_black_line"/>
        <TextView
            android:id="@+id/tv_share_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@mipmap/share128"
            android:text="@string/huoban"
            android:layout_weight="1"
            android:gravity="center"
            />
    </LinearLayout>

    <Button
        android:id="@+id/tv_do_main"
        android:layout_marginTop="@dimen/activity_horizontal_margins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ding"
        android:layout_gravity="center"
        android:background="@drawable/button"
        />
</LinearLayout>
